# Injury-Risk-Detector

./: .gitignore  README.md
.claude/: settings.local.json
backend/: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: imports.py  planned_sessions.py  predictions.py  router.py  symptoms.py  users.py  workouts.py
backend/app/ml/: baseline.py  features.py
backend/app/models/: __init__.py  daily_metrics.py  label.py  planned_session.py  prediction.py  symptom.py  user.py  workout.py
backend/app/schemas/: __init__.py  enums.py  planned_session.py  prediction.py  symptom.py  user.py  workout.py
backend/app/services/: fit_parser.py  recommender.py  risk_scorer.py  safety_rules.py  scoring_config.py
backend/config/: scoring_config.yaml
backend/tests/: conftest.py  test_api.py  test_features.py  test_fit_parser.py  test_import_api.py  test_integration.py  test_recommender.py  test_risk_scorer.py  test_safety_rules.py  test_scoring_config.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/public/: manifest.json
frontend/scripts/: generate-icons.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AlternativeCard.tsx  ErrorBoundary.tsx  FactorList.tsx  Layout.tsx  LoadingSpinner.tsx  QueryErrorBoundary.tsx  RiskGauge.test.tsx  (+1 more)
(+12 files in other folders)
